Spotless apply